@@ -9,11 +9,14 @@ namespace Caliburn.ShellFramework.History
     using System.Reflection;
     using System.Windows.Browser;
     using Core;
+    using Core.Logging;
     using PresentationFramework.ApplicationModel;
     using PresentationFramework.Screens;
 
     public class DefaultHistoryCoordinator : IHistoryCoordinator
     {
+        private static readonly ILog Log = LogManager.GetLog(typeof(DefaultHistoryCoordinator));
+
         private readonly IStateManager _stateManager;
         private readonly IAssemblySource _assemblySource;
 
@@ -47,16 +50,21 @@ namespace Caliburn.ShellFramework.History
             _config.Host.PropertyChanged += Host_PropertyChanged;
             _stateManager.AfterStateLoad += OnAfterStateLoad;
             _stateManager.Initialize(_config.StateName);
+
+            Log.Info("History coordinator started for host {0} with state {1}.", _config.Host, _config.StateName);
         }
 
         public void Refresh()
         {
+            Log.Info("Refreshing {0} from history.", _config.Host);
+
             var historyValue = _stateManager.Get(_config.HistoryKey);
             var screen = _config.DetermineScreen(historyValue);
 
             if(screen == null)
                 _config.ScreenNotFound(historyValue);
-            else if(_config.Host.ActiveScreen == screen) return;
+            else if(_config.Host.ActiveScreen == screen) 
+                return;
             else
             {
                 _config.Host.OpenScreen(screen, wasSuccess =>{
@@ -64,6 +72,7 @@ namespace Caliburn.ShellFramework.History
                         UpdateTitle(screen);
                     else if(_previousScreen != null)
                     {
+                        Log.Info("Updating history key {0}.", _config.HistoryKey);
                         _stateManager.InsertOrUpdate(_config.HistoryKey, _previousScreen.GetHistoryValue());
                         _stateManager.CommitChanges(_previousScreen.DisplayName);
                         UpdateTitle(_previousScreen);
@@ -91,7 +100,8 @@ namespace Caliburn.ShellFramework.History
 
         private void Host_PropertyChanged(object sender, PropertyChangedEventArgs e)
         {
-            if (e.PropertyName != "ActiveScreen") return;
+            if (e.PropertyName != "ActiveScreen") 
+                return;
 
             if (_config.Host.ActiveScreen == _previousScreen)
                 return;
@@ -99,9 +109,14 @@ namespace Caliburn.ShellFramework.History
             _previousScreen = _config.Host.ActiveScreen;
 
             if (_previousScreen == null)
+            {
+                Log.Info("Removing history key {0}.", _config.HistoryKey);
                 _stateManager.Remove(_config.HistoryKey);
+            }
             else
             {
+                Log.Info("Updating history key {0}.", _config.HistoryKey);
+
                 _stateManager.InsertOrUpdate(_config.HistoryKey, _previousScreen.GetHistoryValue());
                 _stateManager.CommitChanges(_previousScreen.DisplayName);
 
