@@ -3,9 +3,12 @@
     using System;
     using System.IO;
     using System.Windows;
+    using Core.Logging;
 
     public class DefaultResourceManager : IResourceManager
     {
+        private static readonly ILog Log = LogManager.GetLog(typeof(DefaultResourceManager));
+
         public Stream GetStream(string relativeUri, string assemblyName)
         {
             try
@@ -13,12 +16,15 @@
                 var resource = Application.GetResourceStream(new Uri(assemblyName + ";component/" + relativeUri, UriKind.Relative))
                                ?? Application.GetResourceStream(new Uri(relativeUri, UriKind.Relative));
 
-                return (resource != null)
-                           ? resource.Stream
-                           : null;
+                if (resource != null)
+                    return resource.Stream;
+
+                Log.Warn("Resource {0} not found in {1}.", relativeUri, assemblyName);
+                return null;
             }
-            catch
+            catch(Exception ex)
             {
+                Log.Error(ex);
                 return null;
             }
         }
